cambiar configuraciones de css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
-/* Variables CSS para la aplicación */
+:r/* Variables CSS para la aplicación */
 :root {
   --foreground: 255, 255, 255;
   --background-start: 0, 0, 0;
